# auto_trade

./: .gitignore  CRON_SETUP.md  README.md  SYSTEM_ARCHITECTURE.md  crontab.txt  pyproject.toml  start_trading.sh  stop_trading.sh
config/: strategies.example.yaml  strategy.example.yaml
docs/: key_level_strategy_research.md
scripts/: backtest_key_level.py  backtest_profit_lock.py  find_consolidation.py  key_level_viewer.py  optimize_ma_rates.py  pine_key_level_strategy.pine  visualize_key_levels.py  visualize_key_levels_real.py
src/auto_trade/: dashboard.py  main.py  run_backtest.py
src/auto_trade/api/: account.py  client.py  market_data.py  orders.py
src/auto_trade/backtest/: backtest.py  compare_acceleration_thresholds.py  compare_strategies.py  compare_three_strategies.py  test_acceleration_90days.py  test_acceleration_thresholds.py  test_death_cross_30days.py  test_death_cross_range.py  test_death_cross_strength.py  test_golden_cross_strength.py
src/auto_trade/core/: __init__.py  client.py  config.py
src/auto_trade/engines/: __init__.py  backtest_engine.py  trading_engine.py
src/auto_trade/exceptions/: __init__.py  trading.py
src/auto_trade/executors/: __init__.py  backtest_executor.py  base_executor.py  live_executor.py
src/auto_trade/models/: __init__.py  account.py  backtest.py  exit_reason.py  market.py  order.py  position.py  position_record.py  strategy.py  trading_unit.py
src/auto_trade/services/: __init__.py  account_service.py  backtest_service.py  indicator_service.py  key_level_detector.py  key_level_signal.py  line_bot_service.py  market_service.py  order_service.py  position_manager.py  profit_lock_structural.py  record_service.py  strategy_service.py  tick_volume_monitor.py  trading_service.py
src/auto_trade/strategies/: __init__.py  base_strategy.py  bollinger_strategy.py  key_level_strategy.py  ma_convergence_strategy.py  macd_bidirectional.py  macd_golden_cross.py  orb_strategy.py  scalp_strategy.py
src/auto_trade/utils/: __init__.py  functional.py  points.py  time_utils.py
src/auto_trade/web/: __init__.py  line_bot_server.py
tradingview/: ma_convergence_breakout.pine
tradingview/indicators/: key_level_confluence_indicator.pine
tradingview/strategies/: key_level_breakout.pine  ma_convergence_breakout.pine  macd_golden_cross.pine
